<resources>
    <string name="app_name">HomeCycling</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main menu -->
    <string name="training">Training</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="synchronization">Synchronization</string>

    <string name="speed">Speed</string>
    <string name="average_speed">Average speed</string>
    <string name="distance">Distance</string>
    <string name="power">Power</string>
    <string name="average_power">Average power</string>
    <string name="time">time</string>
    <string name="time_to_end">Time to end</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="end">End</string>
</resources>
